@@ -1,11 +1,10 @@
 Package: oligo
-Version: 1.7.30
+Version: 1.7.34
 Title: Tools for low-level analysis of oligonucleotide arrays.
 Author: Benilton Carvalho <bcarvalh@jhsph.edu>, Rafael A. Irizarry and Ben Bolstad with contributions from Vince Carey, Robert Gentleman, Wolfgang Huber
 Maintainer: Benilton Carvalho <bcarvalh@jhsph.edu>
-Depends: methods, R (>= 2.5.0), Biobase (>= 1.13.58),
-         splines, RSQLite, preprocessCore, AnnotationDbi,
-         affxparser, oligoClasses (>= 1.5.9)
+Depends: R (>= 2.5.0), oligoClasses (>= 1.5.9), preprocessCore
+Imports: splines, affxparser, graphics, utils, stats, DBI, Biobase (>= 1.13.58), methods
 LinkingTo: preprocessCore
 Suggests: hapmap100kxba, pd.mapping50k.xba240, pd.hg18.60mer.expr, maqcExpression4plex, genefilter, geneplotter, limma, RColorBrewer
 Description: A package to analyze oligonucleotide arrays (expression/SNP/tiling/exon) at probe-level.
