@@ -1,7 +1,50 @@
 useDynLib("oligo")
 
-import(Biobase, splines, graphics, stats, methods, affxparser, oligoClasses)
+## Needed from splines
+importFrom(splines, ns)
 
+## Needed from affxparser
+importFrom(affxparser, createCel, readCel, readCelHeader,
+           readCelIntensities, updateCel)
+
+## Needed from graphics
+importFrom(graphics, boxplot, hist, image, lines, matplot, par, plot)
+importFrom(grDevices, gray)
+
+## Needed from utils
+importFrom(utils, packageDescription, read.delim, read.table,
+           setTxtProgressBar, txtProgressBar, write.table)
+
+## Needed from methods
+importClassesFrom(methods, array, matrix)
+importFrom(methods, "@<-", is, new)
+
+## Needed from stats
+importFrom(stats, coef, cov, density, dnorm, fitted, kmeans, lm,
+           lowess, mad, median, pchisq, quantile, residuals)
+
+## Needed from DBI
+importMethodsFrom(DBI, dbGetQuery)
+
+## Needed from Biobase
+importClassesFrom(Biobase, ExpressionSet)
+importMethodsFrom(Biobase, annotatedDataFrameFrom, annotation,
+                  "annotation<-", experimentData, exprs, featureData,
+                  "featureData<-", featureNames, "featureNames<-",
+                  "notes<-", pData, phenoData, "phenoData<-", preproc,
+                  "preproc<-", rowMedians, sampleNames,
+                  "sampleNames<-", varMetadata)
+importFrom(Biobase, assayDataElement, assayDataElementReplace)
+
+## Needed from preprocessCore
+## importFrom(preprocessCore, normalize.quantiles,
+##            normalize.quantiles.determine.target,
+##            normalize.quantiles.use.target)
+
+## Get everything from oligoClasses
+import(oligoClasses)
+
+## Exporting
 exportMethods("boxplot",
               "bg",
               "bg<-",
@@ -16,7 +59,6 @@ exportMethods("boxplot",
               "MAplot",
               "mm",
               "mm<-",
-              "platform",
               "pm",
               "pm<-",
               "rma")
@@ -33,7 +75,8 @@ export("basecontent",
        "getCrlmmSummaries",
        "getNgsColorsInfo",
        "read.xysfiles2",
-       "read.celfiles2")
+       "read.celfiles2",
+       "basicRMA")
 
 ## Exported functions for CRLMM
 export("crlmm",
