@@ -9,7 +9,6 @@ setMethod("rma", "ExonFeatureSet",
             dimnames(pms) <- NULL
             theExprs <- basicRMA(pms,
                                  as.character(featureInfo[["fsetid"]]),
-                                 length(unique(featureInfo[["fsetid"]])),
                                  normalize, background)
             rm(pms)
 
